crates/octofhir-server/src/lsp/formatting/tests/snapshots/octofhir_server__lsp__formatting__tests__comprehensive_tests__insert_multiple_rows.snap
---
source: crates/octofhir-server/src/lsp/formatting/tests/comprehensive_tests.rs
expression: formatted
---
INSERT INTO patient (id, name) VALUES (1, 'John'), (2, 'Jane'), (3, 'Bob')
