crates/octofhir-server/src/lsp/formatting/tests/snapshots/octofhir_server__lsp__formatting__tests__comprehensive_tests__join_with_and_in_on_clause.snap
---
source: crates/octofhir-server/src/lsp/formatting/tests/comprehensive_tests.rs
expression: formatted
---
SELECT r.last_name
  FROM riders r
       JOIN bikes b
       ON r.bike_vin_num = b.vin_num
          AND b.engine_tally > 2
       JOIN crew c
       ON r.crew_chief_last_name = c.last_name
          AND c.chief = 'Y'
