crates/octofhir-server/src/lsp/formatting/tests/snapshots/octofhir_server__lsp__formatting__tests__comprehensive_tests__jsonb_arrow_operator.snap
---
source: crates/octofhir-server/src/lsp/formatting/tests/comprehensive_tests.rs
expression: formatted
---
SELECT resource -> 'name'
  FROM patient
