crates/octofhir-server/src/lsp/formatting/tests/snapshots/octofhir_server__lsp__formatting__tests__comprehensive_tests__jsonb_question_operators.snap
---
source: crates/octofhir-server/src/lsp/formatting/tests/comprehensive_tests.rs
expression: formatted
---
SELECT *
  FROM test
 WHERE data ? 'key' OR data ?| ARRAY['a', 'b'] OR data ?& ARRAY['x', 'y']
